added done site

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <nav class="navbar">
         <!-- <a href="#" class="logo"> <i class="fas fa-tools"></i> UK-GADGETS </a> -->
-        <a href="#" class="logo"> <img src="images/UK finalvvv.svg"  height="50px" width="50px"  alt=""> </a>
+        <a href="#" class="logo"> <img src="images/UK finalvvv.svg"  height="70px" width="70px"  alt=""> UK - GADGETS</a>
 
         <div class="links">
           <a href="#home">home</a>
@@ -70,8 +70,7 @@
       <div class="content">
         <h3>Why fix it yourself? Leave it to the pros.</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
-          incidunt aspernatur, perspiciatis accusamus illum quam!
+        Hello ! My name is Faheem Fiaz. Hope you are having a good day. At my shop <span>"UK-GADGETS"</span>  . You can find Every type of <span>" Mobile accessories"</span>  and <span>" Gaming Consoles "</span>  with Mobile accessories and Gaming accessores . We provide <span>"Mobile Repairing"</span>  at the spot . So what's stopping you visiting us . You are always welcome.
         </p>
         <a href="#about" class="btn">get started</a>
       </div>
@@ -123,15 +122,22 @@
       <div class="content">
         <h3>best quality Repair services</h3>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim
-          laboriosam quidem eaque, ex qui fugit velit veniam veritatis a nostrum
-          amet perspiciatis pariatur ducimus ipsam officiis quae cumque maiores
-          voluptates!
+          We'll give your mobile a new life , Repairing that we can assure you , <span>Iphones & Android repair</span>  , <span>Panel replacement</span>  , <span>Water damage repairing </span> , <span>Board repairing</span>  , <span>Body Changing</span>  and lastly Mobile repairing / Cleaning.
+         
+
+          <!-- <li>We'll give your mobile a new life </li>
+          <li>Repairing that we can assure you </li>
+          <li>IPhone & Android repair </li>
+          <li>Panel replacement</li>
+          <li>water damage repairing</li>
+          <li>Board repairing</li>
+          <li>Body changing</li>
+          <li>Mobile Cleaning / Service</li> -->
         </p>
-        <p>
+        <!-- <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus
           iste ab eos ea rerum obcaecati illo ex recusandae expedita aspernatur?
-        </p>
+        </p> -->
         <a href="#services" class="btn">read more</a>
       </div>
 
@@ -148,21 +154,19 @@
       <h1 class="heading">our <span>services</span></h1>
 
       <div class="box-container">
-        <div class="box">
+        <!-- <div class="box">
           <img src="images/service-1.svg" alt="" />
           <h3>computer repair</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
-            asperiores.
+            We'll repair your work Stations 
           </p>
-        </div>
+        </div> -->
 
         <div class="box">
           <img src="images/service-2.svg" alt="" />
           <h3>laptop repair</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
-            asperiores.
+            Modify your laptop with us.
           </p>
         </div>
 
@@ -170,8 +174,7 @@
           <img src="images/service-3.svg" alt="" />
           <h3>smartphone repair</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
-            asperiores.
+            Get your Apple and Android Products repaired 
           </p>
         </div>
 
@@ -179,36 +182,33 @@
           <img src="images/service-4.svg" alt="" />
           <h3>game console repair</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
-            asperiores.
+            Get your playstation and xbox repaired.
           </p>
         </div>
-
+<!-- 
         <div class="box">
           <img src="images/service-5.svg" alt="" />
           <h3>multi media repair</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
-            asperiores.
+            Get your Apple Watch repaired
           </p>
-        </div>
+        </div> -->
 
         <div class="box">
           <img src="images/service-6.svg" alt="" />
           <h3>smartwatch repair</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
-            asperiores.
+            Get your Apple Watch repaired
           </p>
         </div>
 
         <!-- laser machine box -->
-        <div class="box">
+        <div class="box laser">
+          
           <img src="images/laser-cutting-machine.svg" alt="" />
           <h3>Laser machine Cut & Print</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
-            asperiores.
+            If you want 3D printing on glass , can't found a glass? come to us!.
           </p>
         </div>
       </div>
@@ -240,6 +240,9 @@
         <a class="box" href="images/g-img-6.jpg"
           ><img src="images/g-img-6.jpg" alt=""
         /></a>
+        <a class="box" href="images/g-img-7.jpg"
+          ><img src="images/g-img-7.jpg" alt=""
+        /></a>
       </div>
     </section>
 
@@ -255,9 +258,7 @@
           <img src="images/why-choose-icon-1.svg" alt="" />
           <h3>24/7 support</h3>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
-            eveniet illum eum cumque tempore. Quo nobis mollitia quis libero
-            ipsa?
+            We give you a 24/ 7 hours and a 365 days service
           </p>
         </div>
 
@@ -265,9 +266,7 @@
           <img src="images/why-choose-icon-2.svg" alt="" />
           <h3>quality service</h3>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
-            eveniet illum eum cumque tempore. Quo nobis mollitia quis libero
-            ipsa?
+           Assuring the quality work of your phone is our 1st priority.
           </p>
         </div>
 
@@ -275,9 +274,7 @@
           <img src="images/why-choose-icon-3.svg" alt="" />
           <h3>quick repair</h3>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
-            eveniet illum eum cumque tempore. Quo nobis mollitia quis libero
-            ipsa?
+            Get your mobile repaired on the spot
           </p>
         </div>
       </div>
