--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
       </div>
 
       <div class="credit">
-        created by <span>Faizan Ali</span> | all rights reserved! &copy
+        created by <span > <a href="https://www.facebook.com/profile.php?id=100068619374776" target="_blank"> Faizan Ali </a></span> | all rights reserved! &copy
         Copyright 2022
       </div>
     </section>
